# msbapi

./: .dockerignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
msbapi/: api.py  command.py
tests/: test_api_torrent_file.py  test_api_torrent_magnet.py  test_command.py  test_env.py
