[tool.poetry]
name = "msbapi"
version = "0.1.0"
description = "my-seedbox.com API for ruTorrent client"
authors = ["Samuel Rince <s@rince.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
