[tool.poetry]
name = "msbapi"
version = "0.1.0"
description = "my-seedbox.com API for ruTorrent client"
authors = ["Samuel Rince <s@rince.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
fastapi = "^0.70.1"
uvicorn = {version = "^0.16.0", extras = ["standard"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
